src/styles/variables.scss
$brand-blue: #1395f0;
$brand-danger: #eb3f47;
$brand-success: #70be44;
$brand-warning: #f68d38;
$brand-primary-gray: #7f8892;
$dark-gray: #5c7288;

$white-0: #000;
$white-100: #fff;
$white-98: lighten($white-0, 98%);   // #fafafa
$white-97: lighten($white-0, 97%);   // #f7f7f7
$white-96: lighten($white-0, 96%);   // #f5f5f5
$white-95: lighten($white-0, 95%);   // #f2f2f2
$white-93: lighten($white-0, 93.5%); // #eee
$white-90: lighten($white-0, 90%);   // #e6e6e6
$white-85: lighten($white-0, 85%);   // #d9d9d9
$white-80: lighten($white-0, 80%);   // #ccc
$white-75: lighten($white-0, 75%);   // #bfbfbf
$white-70: lighten($white-0, 70%);   // #b2b2b2
$white-66: lighten($white-0, 66.7%); // #aaa
$white-60: lighten($white-0, 60%);   // #999
$white-57: lighten($white-0, 57%);   // #919191
$white-50: lighten($white-0, 50%);   // #808080
$white-46: lighten($white-0, 46.7%); // #777
$white-40: lighten($white-0, 40%);   // #666
$white-39: lighten($white-0, 39.3%); // #646464
$white-33: lighten($white-0, 33.5%); // #555
$white-26: lighten($white-0, 26.7%); // #444
$white-22: lighten($white-0, 22.3%); // #393939
$white-20: lighten($white-0, 20%);   // #333
$white-18: lighten($white-0, 18%);   // #2e2e2e
$white-13: lighten($white-0, 13.5%); // #222
$white-6: lighten($white-0, 6.5%);   // #111
$gray-ligther: #d8dde3;

$time-blocked: #a1000c;
$time-dns: #dcc9e5;
$time-ssl: #e78057;
$time-connect: #db8553;
$time-send: #3c96c4;
$time-wait: #7ca0bf;
$time-receive: #65b955;
$time-queueing: $white-80;

$font-size-base:          14px !default;
$font-size-bigger:        16px !default;
$font-size-huge:          42px;
$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
$font-size-small:         ceil(($font-size-base * .85)) !default; // ~12px

$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
$font-size-h5:            $font-size-base !default;
$font-size-h6:            ceil(($font-size-base * .85)) !default; // ~12px

// BORDERS
$border-radius-base: 4px;
$border-size: 4px;

// SIZES
$size-base: 4px;

$size-xs: $size-base; // 4px;
$size-s: $size-base * 3; // 12px;
$size-m: $size-base * 4; // 16px;
$size-l: $size-base * 5; // 20px;
$size-xl: $size-base * 7; // 28px;
$size-xxl: $size-base * 9; // 36px;
$size-xxxl: $size-base * 11; // 44px;

// Then only use these increments of 4px for consistent sizing/spacing
//          XS      S       M       L       XL      XXL     XXXL
//  1x      4       12      16      20      28      36      44
//  2x      8       24      32      40      56      72      88

$filter-button-height: 26px;

$xs: 480px;
$grid-sm: 576px;
$sm: 768px;
$md: 992px;
$lg: 1200px;

// SIZES
$size-base: 4px;

$size-xs: $size-base; // 4px;
$size-s: $size-base * 3; // 12px;
$size-m: $size-base * 4; // 16px;
$size-l: $size-base * 5; // 20px;
$size-xl: $size-base * 7; // 28px;
$size-xxl: $size-base * 9; // 36px;
$size-xxxl: $size-base * 11; // 44px;

:export {
  // sass-lint:disable-block no-misspelled-properties
  brandBlue: $brand-blue;
}

// widths
$name-col-width: 200px;
$filter-row-height: 42px;
$timeline-height: 100px;

// borders
$border: 1px solid $white-80;
$border-dashed: 2px dashed $white-80;

